@@ -3,7 +3,7 @@ package no.vicx.authserver;
 import no.vicx.database.user.UserRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Lookup;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -11,7 +11,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.Collections;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -19,16 +19,12 @@ public class CustomUserDetailsService implements UserDetailsService {
     private static final Logger LOG = LoggerFactory.getLogger(CustomUserDetailsService.class);
 
     private final UserRepository userRepository;
-    private final UserDetails defaultUserDetails;
 
     @Value("${app-user.name}")
     private String defaultUsername;
 
-    public CustomUserDetailsService(
-            UserRepository userRepository,
-            @Qualifier("defaultUserDetails") CustomUserDetails defaultUserDetails) {
+    public CustomUserDetailsService(UserRepository userRepository) {
         this.userRepository = userRepository;
-        this.defaultUserDetails = defaultUserDetails;
     }
 
     @Override
@@ -36,7 +32,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         if (username.equalsIgnoreCase(defaultUsername)) {
             // for localhost testing
             LOG.info("Using default user");
-            return defaultUserDetails;
+            return getDefaultUserDetails();
         }
 
         return userRepository
@@ -44,10 +40,16 @@ public class CustomUserDetailsService implements UserDetailsService {
                 .map(it -> new CustomUserDetails(
                         it.getUsername(),
                         it.getPassword(),
-                        List.of(new SimpleGrantedAuthority("ROLE_USER")),
+                        Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")),
                         it.getName(),
-                        it.getEmail())
+                        it.getEmail(),
+                        it.getUserImage() != null)
                 )
                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+    }
+
+    @Lookup("defaultUserDetails")
+    protected CustomUserDetails getDefaultUserDetails() {
+        return null;
     }
 }
